# Black-Jack-Terminal-Game

./: CMakeLists.txt  README.html  README.md  card_counting_test
README_files/libs/bootstrap/: bootstrap-64f3880315787e8b8747e0524abb812f.min.css
src/: CMakeLists.txt  bot_decision.c  bot_decision.h  card_counting.c  card_counting.h  deck.c  deck.h  game_logic.c  game_logic.h  main.c  terminal_ui.c  terminal_ui.h
test/: bot_decision_test.c
